adição de comentários e de atributos (index.html e style.css)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="instragram-wrapper">
-        <div class="instagram-phone">
+    <div class="instragram-wrapper"> <!--Bloco principal-->
+        <div class="instagram-phone"> <!-- Imagem smartphone-->
             <img src="img/instagram-smartphone.png" alt="smartphone">
         </div>
-        <div class="instagram-continue">
+        <div class="instagram-continue"> <!-- Alternativas login -->
             <div class="group">
                 <img src="img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
@@ -33,8 +33,8 @@
             <div class="get-the-app">
                 <p class="get-app">Get the app.</p>
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="#" title="download on appstore" class="app-download"></a>
+                    <a href="#" title="download on google play" class="app-download"></a>
                 </div>
             </div>
         </div>
