--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="get-the-app">
                 <p class="get-app">Get the app.</p>
                 <div class="download">
-                    <a href="#" title="download on appstore" class="app-download"></a>
-                    <a href="#" title="download on google play" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
+                    <a href="#" class="app-download"></a>
                 </div>
             </div>
         </div>
